Fix icon spacing and text spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,3 +19,9 @@
 .post { 
   text-align: justify;
 }
+
+.custom-menu {padding-bottom: 20%; font-size: 15px;}
+
+#space-icon{
+  margin-left: 7px;
+}
